# frontend-study

./: README.md  pyproject.toml
real-python/: python-web-scaping-practical-introduction.py
